<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            style="@style/LargeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:gravity="center"
            android:scaleType="fitXY"
            android:text="@string/registration_form"
            android:textColor="@color/color_black"
            android:textSize="@dimen/font_xxxlarge" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginRight="@dimen/margin_small"
            app:cardCornerRadius="@dimen/margin_normal">
            <!--<include-->
            <!--android:id="@+id/tool_bar"-->
            <!--layout="@layout/toolbar_layout" />-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_small"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/NormalTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="@string/full_name" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        app:hintTextAppearance="@style/NormalTextView">

        <com.google.android.material.textfield.TextInputEditText
android:id="@+id/etFullName"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_margin="@dimen/margin_xsmall"
android:inputType="text"
android:digits="qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM. "
android:maxLines="1"
android:maxLength="50"
android:textSize="@dimen/font_normal" />
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="horizontal">

    <TextView
        style="@style/NormalTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="@string/reg_no" />

<com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        app:hintTextAppearance="@style/NormalTextView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etRegNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_xsmall"

            android:digits="qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM. "
            android:maxLines="1"
            android:maxLength="50"
            android:textSize="@dimen/font_normal" />
</com.google.android.material.textfield.TextInputLayout>
</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="horizontal">

    <TextView
        style="@style/NormalTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="@string/contact_no" />
<com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:gravity="center">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etContactNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_xsmall"
            android:inputType="number"
            app:mask="9999-9999999"
            app:placeholder=" "
            tools:ignore="MissingClass" />
</com.google.android.material.textfield.TextInputLayout>
</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="horizontal">

    <TextView
        style="@style/NormalTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="@string/cinc" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:gravity="center">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCNIC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_xsmall"
            android:inputType="number"
            app:mask="99999-9999999-9"
            app:placeholder=" " />
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="horizontal">

    <TextView
        style="@style/NormalTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="@string/email_id" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        app:hintTextAppearance="@style/NormalTextView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmailID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_xsmall"
            android:inputType="textEmailAddress"
            android:digits="qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM,.-_@#0123456789"

            android:maxLines="1"

            android:textSize="@dimen/font_normal" />
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="horizontal">

    <TextView
        style="@style/NormalTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="@string/user_name" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        app:hintTextAppearance="@style/NormalTextView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_xsmall"
            android:inputType="text"
            android:digits="qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM. "
            android:maxLines="1"
            android:ems="10"

            android:maxLength="50"
            android:textSize="@dimen/font_normal" />
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="horizontal">

    <TextView
        style="@style/NormalTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="@string/password" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        app:hintTextAppearance="@style/NormalTextView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_xsmall"
            android:inputType="textPassword"
            android:maxLength="30"
            android:maxLines="1"

            android:textSize="@dimen/font_normal" />
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="horizontal">

    <TextView
        style="@style/NormalTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="@string/confirm_password" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        app:hintTextAppearance="@style/NormalTextView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_xsmall"

            android:inputType="textPassword"
            android:maxLength="30"
            android:maxLines="1"

            android:textSize="@dimen/font_normal" />
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="horizontal">

    <TextView
        style="@style/NormalTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="@string/type" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        app:hintTextAppearance="@style/NormalTextView">
        <EditText
            android:id="@+id/etType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@android:drawable/arrow_down_float"
                android:hint="dfadfafa"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textSize="@dimen/font_normal" />
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="horizontal">

    <TextView
        style="@style/NormalTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="@string/hospital_name" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        app:hintTextAppearance="@style/NormalTextView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etHospitalName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_xsmall"
            android:inputType="text"
            android:digits="qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM. "
            android:maxLines="1"
            android:maxLength="50"
            android:textSize="@dimen/font_normal" />
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="horizontal">

    <TextView
        style="@style/NormalTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="@string/address" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        app:hintTextAppearance="@style/NormalTextView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_xsmall"
            android:digits="qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM ,#0123456789"
            android:inputType="textMultiLine"
            android:maxLength="30"
            android:maxLines="1"
            android:textSize="@dimen/font_normal" />
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>

<Button
    android:id="@+id/btnSubmit"
    style="@style/ButtonStyle"
    android:layout_width="@dimen/button_width"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginBottom="@dimen/margin_large"
    android:background="@drawable/button_selector"
    android:text="@string/submit"
    android:textAllCaps="false"
    android:textColor="@color/color_white"
    android:textSize="@dimen/font_large" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>